Added Functionality for Adding/Removing User Preferences
* Adding and Removing user preferences has been optimized to minimize the number of records in the user preferences table. If the requested update sets the value to the preference default value, it deletes it from the database. This may require a bit more work on the front-end to implement correctly, but will hopefully pay off.
* Added ability to delete a global preference which also deletes all user preferences associated with that preference
